Fixed Bug 38707 - Alert boxes in high-contrast mode have lower contrast

--- a/ui/apps/themes/components/alert.less
+++ b/ui/apps/themes/components/alert.less
@@ -78,15 +78,15 @@
 
     html.high-contrast &.io-ox-alert-error {
         background-color: @red;
-        .icon, .close { color: @black; }
+        .icon, .close, .message, a { color: @white; opacity: 1; }
     }
     html.high-contrast &.io-ox-alert-warning {
         background-color: @yellow;
-        .icon, .close { color: @black; }
+        .icon, .close, .message, a { color: @black; opacity: 1; }
     }
     html.high-contrast &.io-ox-alert-success {
         background-color: @green;
-        .icon, .close { color: @black; }
+        .icon, .close, .message, a { color: @black; opacity: 1; }
     }
 
     &.io-ox-alert-info .icon { color: #08c; }
